tests/artifacts/perf/lavender_post_gowx2_local_build_perf_profile.txt
warning: /data/projects/frankenpandas/crates/fp-bench/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-python/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-columnar/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-expr/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-join/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-runtime/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-io/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-frankentui/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-groupby/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-frame/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-index/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/frankenpandas/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-types/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
warning: /data/projects/frankenpandas/crates/fp-conformance/Cargo.toml: only one of `license` or `license-file` is necessary
`license` should be used if the package license can be expressed with a standard SPDX expression.
`license-file` should be used if the package uses a non-standard license.
See https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields for more information.
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling syn v2.0.117
   Compiling cfg-if v1.0.4
   Compiling libc v0.2.185
   Compiling libm v0.2.16
   Compiling autocfg v1.5.0
   Compiling num-traits v0.2.19
   Compiling foldhash v0.2.0
   Compiling siphasher v1.0.2
   Compiling hashbrown v0.17.0
   Compiling memchr v2.8.0
   Compiling zerocopy v0.8.48
   Compiling zerocopy-derive v0.8.48
   Compiling serde_core v1.0.228
   Compiling getrandom v0.3.4
   Compiling num-integer v0.1.46
   Compiling iana-time-zone v0.1.65
   Compiling chrono v0.4.45
   Compiling jobserver v0.1.34
   Compiling phf_shared v0.12.1
   Compiling chrono-tz v0.10.4
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.9
   Compiling cc v1.2.60
   Compiling phf v0.12.1
   Compiling num-bigint v0.4.6
   Compiling half v2.7.1
   Compiling bytes v1.11.1
   Compiling itoa v1.0.18
   Compiling once_cell v1.21.4
   Compiling serde v1.0.228
   Compiling serde_derive v1.0.228
   Compiling equivalent v1.0.2
   Compiling version_check v0.9.5
   Compiling ahash v0.8.12
   Compiling indexmap v2.14.0
   Compiling phf_shared v0.13.1
   Compiling fastrand v2.4.1
   Compiling phf_generator v0.13.1
   Compiling arrow-buffer v58.3.0
   Compiling num-complex v0.4.6
   Compiling pkg-config v0.3.33
   Compiling arrow-schema v58.3.0
   Compiling arrow-data v58.3.0
   Compiling zmij v1.0.21
   Compiling arrow-array v58.3.0
   Compiling serde_json v1.0.150
   Compiling bitflags v2.11.1
   Compiling regex-syntax v0.8.10
   Compiling aho-corasick v1.1.4
   Compiling smallvec v1.15.1
   Compiling regex-automata v0.4.14
   Compiling thiserror v2.0.18
   Compiling lexical-util v1.0.7
   Compiling typenum v1.20.0
   Compiling hybrid-array v0.4.10
   Compiling regex v1.12.3
   Compiling arrow-select v58.3.0
   Compiling zstd-sys v2.0.16+zstd.1.5.7
   Compiling phf_codegen v0.13.1
   Compiling thiserror-impl v2.0.18
   Compiling rustc-hash v2.1.2
   Compiling log v0.4.29
   Compiling parking_lot_core v0.9.12
   Compiling unicode-width v0.2.2
   Compiling crc32fast v1.5.0
   Compiling semver v1.0.28
   Compiling rustc_version v0.4.1
   Compiling block-buffer v0.12.0
   Compiling crypto-common v0.2.1
   Compiling lexical-write-integer v1.0.6
   Compiling lexical-parse-integer v1.0.6
   Compiling phf_macros v0.13.1
   Compiling ryu v1.0.23
   Compiling scopeguard v1.2.0
   Compiling simd-adler32 v0.3.9
   Compiling zstd-safe v7.2.4
   Compiling const-oid v0.10.2
   Compiling new_debug_unreachable v1.0.6
   Compiling digest v0.11.2
   Compiling lock_api v0.4.14
   Compiling phf v0.13.1
   Compiling lexical-parse-float v1.0.6
   Compiling lexical-write-float v1.0.6
   Compiling flatbuffers v25.12.19
   Compiling fp-types v0.1.0 (/data/projects/frankenpandas/crates/fp-types)
   Compiling string_cache_codegen v0.6.1
   Compiling cpufeatures v0.3.0
   Compiling bumpalo v3.20.3
   Compiling twox-hash v2.1.2
   Compiling base64 v0.22.1
   Compiling adler2 v2.0.1
   Compiling tinyvec_macros v0.1.1
   Compiling byteorder v1.5.0
   Compiling precomputed-hash v0.1.1
   Compiling unicode-segmentation v1.13.2
   Compiling comfy-table v7.2.2
   Compiling tinyvec v1.11.0
   Compiling miniz_oxide v0.8.9
   Compiling sha2 v0.11.0
   Compiling web_atoms v0.2.4
   Compiling parking_lot v0.12.5
   Compiling lexical-core v1.0.6
   Compiling arrow-ord v58.3.0
   Compiling atoi v2.0.0
   Compiling zlib-rs v0.6.3
   Compiling anyhow v1.0.102
   Compiling flate2 v1.1.9
   Compiling arrow-cast v58.3.0
   Compiling string_cache v0.9.0
   Compiling zstd v0.13.3
   Compiling fp-runtime v0.1.0 (/data/projects/frankenpandas/crates/fp-runtime)
   Compiling unicode-normalization v0.1.25
   Compiling lz4_flex v0.13.0
   Compiling fp-index v0.1.0 (/data/projects/frankenpandas/crates/fp-index)
   Compiling fp-columnar v0.1.0 (/data/projects/frankenpandas/crates/fp-columnar)
error[E0592]: duplicate definitions with name `bool_once_lock`
    --> crates/fp-columnar/src/lib.rs:2167:5
     |
2149 |     fn bool_once_lock(value: Option<bool>) -> OnceLock<bool> {
     |     -------------------------------------------------------- other definition for `bool_once_lock`
...
2167 |     fn bool_once_lock(value: Option<bool>) -> OnceLock<bool> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `bool_once_lock`

error[E0592]: duplicate definitions with name `lazy_all_valid_float64_with_finite`
    --> crates/fp-columnar/src/lib.rs:2175:5
     |
2157 |     fn lazy_all_valid_float64_with_finite(data: Vec<f64>, all_finite: Option<bool>) -> Self {
     |     --------------------------------------------------------------------------------------- other definition for `lazy_all_valid_float64_with_finite`
...
2175 |     fn lazy_all_valid_float64_with_finite(data: Vec<f64>, all_finite: Option<bool>) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `lazy_all_valid_float64_with_finite`

For more information about this error, try `rustc --explain E0592`.
error: could not compile `fp-columnar` (lib) due to 2 previous errors
